Original version of nelson's code

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//Nelson/CompressorVaporInj_407C.py=utf-8
+encoding//original_nelson/CompressorVaporInj_407C.py=utf-8
 encoding/propertyplots.py=utf8
