Some files for Orkan

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,4 +2,5 @@ eclipse.preferences.version=1
 encoding//Nelson/CompressorVaporInj_407C.py=utf-8
 encoding//Nelson/CompressorVaporInj_407C_low.py=utf-8
 encoding//Nelson/original_nelson/CompressorVaporInj_407C.py=utf-8
+encoding//Orkan/Processed\ Data_Orkan_Edits\ by\ Andy.py=utf-8
 encoding/propertyplots.py=utf8
