update folder names

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,5 @@
 eclipse.preferences.version=1
-encoding//ANN\ Tmin/DataIO.py=utf-8
+encoding//ANN_Tmin/DataIO.py=utf-8
 encoding//Nelson/CompressorVaporInj_407C.py=utf-8
 encoding//Nelson/CompressorVaporInj_407C_low.py=utf-8
 encoding//Nelson/original_nelson/CompressorVaporInj_407C.py=utf-8
