--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//ANN_Graphene/DataIO.py=utf-8
 encoding//ANN_Tmin/DataIO.py=utf-8
 encoding//Ali/Schedule_Generator.py=utf-8
 encoding//Nelson/CompressorVaporInj_407C.py=utf-8
